--- a/projects/project-4.html
+++ b/projects/project-4.html
@@ -4,36 +4,177 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Last Night — Pedro Cruz</title>
+
 <style>
-*{box-sizing:border-box} body{margin:0;font-family:Helvetica,Arial,sans-serif;background:#0b0b0b;color:#eaeaea}
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family:Helvetica,Arial,sans-serif;
+  background:#0b0b0b;
+  color:#eaeaea;
+}
+
+/* HOME */
+.home-link{
+  position:fixed;
+  top:20px;
+  left:20px;
+  font-size:.8rem;
+  opacity:.8;
+  z-index:1000;
+}
+.home-link a{
+  text-decoration:none;
+  color:#eaeaea;
+}
+.home-link a:hover{opacity:1}
+
+/* LANG */
+.lang-switch{
+  position:fixed;
+  top:20px;
+  right:20px;
+  font-size:.8rem;
+  z-index:1000;
+}
+.lang-switch span{
+  margin-left:14px;
+  cursor:pointer;
+  opacity:.6;
+}
+.lang-switch .active{
+  text-decoration:underline;
+  opacity:1;
+}
+
 header{text-align:center;padding:120px 24px 80px}
 header h1{font-size:1.8rem;font-weight:400}
 header p{font-size:.9rem;opacity:.6}
-.text{max-width:720px;margin:0 auto 120px;font-size:.95rem;opacity:.85}
+
+.text{max-width:720px;margin:0 auto 120px;font-size:.95rem;opacity:.9}
 .text p{margin-bottom:1.4em}
-.projects{max-width:1400px;margin:0 auto;padding:0 24px 160px;display:grid;grid-template-columns:repeat(auto-fit,minmax(320px,1fr));gap:40px}
-.card{aspect-ratio:4/3;background-size:cover;background-position:center;cursor:pointer}
-.card:hover{opacity:.85}
-nav.project-nav{position:fixed;top:50%;right:20px;transform:translateY(-50%);display:flex;flex-direction:column;gap:10px}
-nav.project-nav a{color:#eaeaea;text-decoration:none;font-size:.9rem;opacity:.7}
-nav.project-nav a:hover, nav.project-nav a.active{opacity:1;text-decoration:underline}
-.lightbox{position:fixed;inset:0;background:rgba(0,0,0,.96);display:none;align-items:center;justify-content:center;flex-direction:column;z-index:9999}
+
+.projects{
+  max-width:1400px;
+  margin:0 auto;
+  padding:0 24px 160px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(320px,1fr));
+  gap:40px;
+}
+.card{
+  aspect-ratio:4/3;
+  background-size:cover;
+  background-position:center;
+  cursor:pointer;
+}
+
+/* NAV PROJECTS */
+nav.project-nav{
+  position:fixed;
+  top:50%;
+  right:20px;
+  transform:translateY(-50%);
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+}
+nav.project-nav a{
+  color:#eaeaea;
+  text-decoration:none;
+  font-size:.9rem;
+  opacity:.7;
+}
+nav.project-nav a:hover{opacity:1;text-decoration:underline}
+
+/* LIGHTBOX */
+.lightbox{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.96);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+  z-index:9999;
+}
 .lightbox.active{display:flex}
-.lightbox img{max-width:92vw;max-height:82vh;object-fit:contain}
-.caption{margin-top:20px;font-size:.85rem;opacity:.6;color:#fff;text-align:center}
+.lightbox img{
+  max-width:92vw;
+  max-height:82vh;
+  object-fit:contain;
+}
+.caption{
+  margin-top:20px;
+  font-size:.85rem;
+  opacity:.7;
+  text-align:center;
+}
+
+/* CLICK ZONES */
+.lb-nav{
+  position:fixed;
+  top:0;
+  bottom:0;
+  width:50%;
+}
+.lb-left{left:0}
+.lb-right{right:0}
+
+/* BUTTONS */
+.lb-btn{
+  position:fixed;
+  top:50%;
+  transform:translateY(-50%);
+  font-size:38px;
+  padding:6px 14px;
+  background:rgba(0,0,0,.45);
+  border-radius:10px;
+  cursor:pointer;
+  opacity:.85;
+}
+.lb-btn:hover{background:black}
+.lb-prev{left:22px}
+.lb-next{right:22px}
+
 footer{text-align:center;padding:80px 20px;font-size:.8rem;opacity:.5}
+
+@media(max-width:600px){
+ header h1{font-size:1.45rem}
+ .projects{gap:20px}
+}
 </style>
 </head>
+
 <body>
 
+<div class="home-link">
+  <a href="../index.html">← Home</a>
+</div>
+
+<div class="lang-switch">
+  <span id="pt" class="active" onclick="setLang('pt')">PT</span>
+  <span id="en" onclick="setLang('en')">EN</span>
+</div>
+
 <header>
-  <h1>Last Night</h1>
-  <p>2016</p>
+  <h1 class="lang-pt">Last Night</h1>
+  <h1 class="lang-en" style="display:none;">Last Night</h1>
+
+  <p class="lang-pt">2016</p>
+  <p class="lang-en" style="display:none;">2016</p>
 </header>
 
 <section class="text">
-  <p>Last Night explora o território nocturno onde arquitectura, luz e instabilidade se encontram. As imagens sugerem momentos de fratura e suspensão, como se a cidade estivesse presa num estado frágil entre presença e colapso.</p>
-  <p>A sequência desenrola-se como uma descida lenta, do momento de antecipação até às consequências, sem se resolver num evento claro.</p>
+  <div class="lang-pt">
+    <p><strong>Last Night</strong> explora o território nocturno onde arquitectura, luz e instabilidade se encontram. As imagens sugerem momentos de fratura e suspensão, como se a cidade estivesse presa num estado frágil entre presença e colapso.</p>
+    <p>A sequência desenrola-se como uma descida lenta, do momento de antecipação até às consequências, sem se resolver num evento claro.</p>
+  </div>
+
+  <div class="lang-en" style="display:none;">
+    <p><strong>Last Night</strong> explores the nocturnal territory where architecture, light and instability meet. The images suggest moments of fracture and suspension, as if the city were trapped in a fragile state between presence and collapse.</p>
+    <p>The sequence unfolds like a slow descent, from anticipation to consequence, without resolving into a single clear event.</p>
+  </div>
 </section>
 
 <section class="projects">
@@ -54,26 +195,83 @@ footer{text-align:center;padding:80px 20px;font-size:.8rem;opacity:.5}
 
 <footer>© 2025 — Pedro Cruz</footer>
 
-<div class="lightbox" id="lb" onclick="closeLB()">
+<!-- LIGHTBOX -->
+<div class="lightbox" id="lb">
+  <div class="lb-nav lb-left" onclick="prevImg()"></div>
+  <div class="lb-nav lb-right" onclick="nextImg()"></div>
+
+  <div class="lb-btn lb-prev" onclick="prevImg()">❮</div>
+  <div class="lb-btn lb-next" onclick="nextImg()">❯</div>
+
   <img id="lbimg">
   <div class="caption" id="lbcap"></div>
 </div>
 
 <script>
-const images=["../assets/cas/cas01.jpg","../assets/cas/cas02.jpg","../assets/cas/cas03.jpg","../assets/cas/cas04.jpg","../assets/cas/cas05.jpg","../assets/cas/cas06.jpg","../assets/cas/cas07.jpg","../assets/cas/cas08.jpg"];
+const images=[
+ "../assets/cas/cas01.jpg","../assets/cas/cas02.jpg",
+ "../assets/cas/cas03.jpg","../assets/cas/cas04.jpg",
+ "../assets/cas/cas05.jpg","../assets/cas/cas06.jpg",
+ "../assets/cas/cas07.jpg","../assets/cas/cas08.jpg"
+];
+
 const titlesPT=["Antes","Fratura","Instável","Suspensa","Eco","Padrão","Colapso","Depois"];
 const titlesEN=["Before","Fracture","Unstable","Suspended","Echo","Pattern","Collapse","After"];
-let currentLang="pt";
 
-function openLB(i){
-  lb.classList.add('active');
-  lbimg.src = images[i];
-  lbcap.textContent = currentLang==="pt"?titlesPT[i]:titlesEN[i];
+let current=0;
+let lang="pt";
+
+/* ---- LANGUAGE ---- */
+function setLang(l){
+  lang=l;
+  document.querySelectorAll('.lang-pt').forEach(e=>e.style.display=l==="pt"?"block":"none");
+  document.querySelectorAll('.lang-en').forEach(e=>e.style.display=l==="en"?"block":"none");
+  pt.classList.toggle('active',l==="pt");
+  en.classList.toggle('active',l==="en");
+  updateLB();
 }
-function closeLB(){ lb.classList.remove('active'); }
-document.addEventListener('keydown',e=>{
-  if(e.key==="ArrowLeft") window.location.href="project-3.html";
-  if(e.key==="ArrowRight") window.location.href="project-5.html";
+
+/* ---- LIGHTBOX ---- */
+function openLB(i){
+  current=i;
+  lb.classList.add("active");
+  updateLB();
+}
+
+function closeLB(){
+  lb.classList.remove("active");
+}
+
+function updateLB(){
+  lbimg.src=images[current];
+  lbcap.textContent = lang==="pt"?titlesPT[current]:titlesEN[current];
+}
+
+function nextImg(){
+  current=(current+1)%images.length;
+  updateLB();
+}
+
+function prevImg(){
+  current=(current-1+images.length)%images.length;
+  updateLB();
+}
+
+/* Close clicking empty bg */
+lb.addEventListener("click",e=>{
+  if(e.target===lb) closeLB();
+});
+
+/* Keyboard navigation */
+document.addEventListener("keydown",e=>{
+  if(lb.classList.contains("active")){
+    if(e.key==="ArrowRight") nextImg();
+    if(e.key==="ArrowLeft") prevImg();
+    if(e.key==="Escape") closeLB();
+  } else {
+    if(e.key==="ArrowLeft") window.location.href="project-3.html";
+    if(e.key==="ArrowRight") window.location.href="project-5.html";
+  }
 });
 </script>
 
